--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/DirectDebitMandate.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/DirectDebitMandate.yaml
@@ -6,7 +6,7 @@ info:
     Direct Debit Mandate (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/DirectDebitMandate/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/DirectDebitMandate/12.0.1'
 paths:
   '/DirectDebitMandateDirectoryEntry/Register':
       post:
@@ -2759,8 +2759,10 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) - The date and time the mandate collection is valid from to (allows
+          for duration limits) DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -3125,8 +3127,9 @@ components:
     DirectDebitMandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation in favour of the creditor given by the debtor to
-          debit its own account. 
+          (DDD Entity) -  DirectDebitMandate|DirectDebitMandate
+          (https://www.iso20022.org/standardsrepository/type/DirectDebitMandate)|Standard|ISO20022
+          BM ()
         properties:
           RelatedDirectDebit:
               type: string
@@ -3181,8 +3184,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - A unique reference refers to an instance of CR
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -3310,10 +3315,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) -  Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -3499,7 +3503,10 @@ components:
                 portfolios. 
     Presentation:
         type: object
-        description: '(DDD Entity) - Presentation of documents. '
+        description: >-
+          (DDD Entity) -  Presentation|Presentation
+          (https://www.iso20022.org/standardsrepository/type/Presentation)|Standard|ISO20022
+          BM ()
         properties:
           CommunicationMethod:
               type: string
@@ -3545,8 +3552,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
