--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/DirectDebitsService.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/DirectDebitsService.yaml
@@ -6,7 +6,7 @@ info:
     Direct Debits Service (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/DirectDebitsService/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/DirectDebitsService/12.0.1'
 paths:
   '/DirectDebitsServiceFacility/Initiate':
       post:
@@ -1096,8 +1096,12 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Code, issued by the local authority (National Adherence Support
+          Organisation), that identifies the customer as being recorded for
+          using direct debits as a payment instrument (name is SEPA standard)
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -1225,10 +1229,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the instance of Corporate Current Account into which
+          the direct debit payments will be made Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -1449,8 +1453,10 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) - Details of the fee arrangement that the bank concluded with the
+          customer Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
