--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/DocumentServices.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/DocumentServices.yaml
@@ -6,7 +6,7 @@ info:
     Document Services (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/DocumentServices/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/DocumentServices/12.0.1'
 paths:
   '/DocumentServiceProcedure/{documentserviceprocedureid}/Control':
       put:
@@ -2208,7 +2208,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Document Service Procedure Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -2256,7 +2259,13 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product or service that is related to Document
+          Service Procedure Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -2332,8 +2341,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Reference to the Financial Transaction Arrangement that is related
+          to Document Service Procedure Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -2394,7 +2405,13 @@ components:
               description: '(DDD Entity) - Type of exposure related to this obligation. '
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) - Reference to the Customer Agreement that is related to Document
+          Service Procedure Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
@@ -2431,9 +2448,7 @@ components:
               description: '(DDD Entity) - Jurisdiction where an agreement applies. '
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) - Reference to the document that is managed by Document Service Procedure Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
@@ -2551,7 +2566,10 @@ components:
               description: '(DDD Entity) - Related document which materialises the agreement. '
     DocumentPartyRole:
         type: object
-        description: '(DDD Entity) - Role played by a party in the context of a document. '
+        description: >-
+          (DDD Entity) -  DocumentPartyRole|DocumentPartyRole
+          (https://www.iso20022.org/standardsrepository/type/DocumentPartyRole)|Standard|ISO20022
+          BM ()
         properties:
           Document:
               type: string
