--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FinancialInstrumentReferenceDataManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FinancialInstrumentReferenceDataManagement.yaml
@@ -6,8 +6,7 @@ info:
     Financial Instrument Reference Data Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/FinancialInstrumentReferenceDataManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/FinancialInstrumentReferenceDataManagement/12.0.1'
 paths:
   '/FinancialInstrumentDirectoryEntry/{financialinstrumentdirectoryentryid}/Control':
       put:
@@ -4724,7 +4723,10 @@ components:
         description: (DDD Entity) - Number of objects represented as an integer.
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Financial Instrument Directory Entry Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -4772,7 +4774,10 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Asset:
         type: object
-        description: '(DDD Entity) - Tangible items of value to a business. '
+        description: >-
+          (DDD Entity) -  Asset|Asset
+          (https://www.iso20022.org/standardsrepository/type/Asset)|Standard|ISO20022
+          BM ()
         properties:
           ExpiryDate:
               type: string
