--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FinancialStatementAssessment.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FinancialStatementAssessment.yaml
@@ -6,7 +6,7 @@ info:
     Financial Statement Assessment (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/FinancialStatementAssessment/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/FinancialStatementAssessment/12.0.1'
 paths:
   '/FinancialStatementAssessment/Evaluate':
       post:
@@ -3852,7 +3852,11 @@ components:
         description: Status Attributes
     Assessment:
         type: object
-        description: '(DDD Entity) - Assessment for the components of a system. '
+        description: >-
+          (DDD Entity) - An unique reference to an item or an occurrence of Financial
+          Statement Assessment Assessment|Assessment
+          (https://www.iso20022.org/standardsrepository/type/Assessment)|Standard|ISO20022
+          BM ()
         properties:
           AssessmentType:
               type: string
@@ -3872,7 +3876,10 @@ components:
               description: '(DDD Entity) - Date when the assessment document was delivered. '
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Financial Statement Assessment Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
