--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InformationProviderOperation.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InformationProviderOperation.yaml
@@ -6,7 +6,7 @@ info:
     Information Provider Operation (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/InformationProviderOperation/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/InformationProviderOperation/12.0.1'
 paths:
   '/InformationFeedOperatingSession/{informationfeedoperatingsessionid}/Control':
       put:
@@ -1097,7 +1097,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Information Feed Operating Session Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
