--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InvestmentAccount.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InvestmentAccount.yaml
@@ -6,7 +6,7 @@ info:
     Investment Account (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/InvestmentAccount/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/InvestmentAccount/12.0.1'
 paths:
   '/InvestmentAccountFacility/Initiate':
       post:
@@ -11624,8 +11624,10 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) - The associated investment account number in any suitable format
+          AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -11688,10 +11690,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Definition of the associations to the account Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -11877,7 +11878,10 @@ components:
                 portfolios. 
     Position:
         type: object
-        description: '(DDD Entity) - Specifies the status of trades and their value inside a system. '
+        description: >-
+          (DDD Entity) - The current calculated holding/position Position |Position 
+          (https://www.iso20022.org/standardsrepository/type/Position)|Standard|ISO20022
+          BM ()
         properties:
           NetQuantity:
               type: string
@@ -11912,8 +11916,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - The position definition, associated limit settings and rules
+          Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
@@ -11989,8 +11995,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Unique and unambiguous identification of a Product Marketing
+          State. GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -12130,9 +12138,7 @@ components:
           Note: A zero amount is considered a positive amount.
     CashDeposit:
         type: object
-        description: >-
-          (DDD Entity) - Amount of money representing a value paid by a debtor to an agent
-          bank. 
+        description: (DDD Entity) -  CashDeposit| ()|Standard|ISO20022 BM ()
         properties:
           NoteDenomination:
               type: string
@@ -12161,9 +12167,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -12223,9 +12229,9 @@ components:
     CorporateActionEvent:
         type: object
         description: >-
-          (DDD Entity) - An event determined by a corporation's board of directors, that
-          changes the existing corporate capital structure or financial
-          condition. 
+          (DDD Entity) -  CorporateActionEvent|CorporateActionEvent
+          (https://www.iso20022.org/standardsrepository/type/CorporateActionEvent)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
