--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/IssuedDeviceAdministration.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/IssuedDeviceAdministration.yaml
@@ -6,7 +6,7 @@ info:
     Issued Device Administration (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/IssuedDeviceAdministration/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/IssuedDeviceAdministration/12.0.1'
 paths:
   '/IssuedDeviceAllocation/Initiate':
       post:
@@ -5525,8 +5525,10 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) - The refresh period for the issued device
+          DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -5895,8 +5897,9 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) -  GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -6023,7 +6026,10 @@ components:
                 scope of the regulatory requirements are registered. 
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -6109,10 +6115,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) -  Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -6299,9 +6304,9 @@ components:
     PaymentCard:
         type: object
         description: >-
-          (DDD Entity) - Electronic money product that provides the cardholder with a
-          portable and specialised computer device that typically contains a
-          microprocessor. 
+          (DDD Entity) -  PaymentCard|PaymentCard
+          (https://www.iso20022.org/standardsrepository/type/PaymentCard)|Standard|ISO20022
+          BM ()
         properties:
           Payment:
               type: string
