--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/Leasing.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/Leasing.yaml
@@ -6,7 +6,7 @@ info:
     Leasing (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/Leasing/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/Leasing/12.0.1'
 paths:
   '/LeasingFacility/{leasingfacilityid}/Control':
       put:
@@ -18432,7 +18432,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Leasing Arrangement Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -18490,8 +18493,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Leasing
+          Arrangement in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -18536,10 +18541,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Leasing Arrangement
+          Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -18726,8 +18731,11 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Identifier within the parent organisation for the product. Must be
+          unique in the organisation.
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -18899,8 +18907,9 @@ components:
     DirectDebitMandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation in favour of the creditor given by the debtor to
-          debit its own account. 
+          (DDD Entity) -  DirectDebitMandate|DirectDebitMandate
+          (https://www.iso20022.org/standardsrepository/type/DirectDebitMandate)|Standard|ISO20022
+          BM ()
         properties:
           RelatedDirectDebit:
               type: string
@@ -18954,7 +18963,10 @@ components:
                 moment within a specified period type. 
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) -  Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -19013,7 +19025,10 @@ components:
               description: '(DDD Entity) - Specifies the type of shareholding. '
     PaymentTerms:
         type: object
-        description: '(DDD Entity) - Specifies the payment terms of the obligation. '
+        description: >-
+          (DDD Entity) -  PaymentTerms|PaymentTerms
+          (https://www.iso20022.org/standardsrepository/type/PaymentTerms)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -19054,9 +19069,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -19116,8 +19131,9 @@ components:
     PaymentProcessing:
         type: object
         description: >-
-          (DDD Entity) - Specifies how a payment must be processed, for instance through
-          which specific clearing channel. 
+          (DDD Entity) -  PaymentProcessing|PaymentProcessing
+          (https://www.iso20022.org/standardsrepository/type/PaymentProcessing)|Standard|ISO20022
+          BM ()
         properties:
           Priority:
               type: string
@@ -19186,7 +19202,10 @@ components:
                 transaction. 
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -19272,8 +19291,9 @@ components:
     Mandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation given by an issuing party to a holder party to act
-          on the issuer's behalf. 
+          (DDD Entity) -  Mandate|Mandate
+          (https://www.iso20022.org/standardsrepository/type/Mandate)|Standard|ISO20022
+          BM ()
         properties:
           SignatureConditions:
               type: string
@@ -19353,9 +19373,7 @@ components:
           October 2004" which is aligned with ISO 8601.
     CashDeposit:
         type: object
-        description: >-
-          (DDD Entity) - Amount of money representing a value paid by a debtor to an agent
-          bank. 
+        description: (DDD Entity) -  CashDeposit| ()|Standard|ISO20022 BM ()
         properties:
           NoteDenomination:
               type: string
@@ -19384,8 +19402,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -19447,8 +19466,9 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) -  AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -19511,8 +19531,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -19537,12 +19558,9 @@ components:
     Clearing:
         type: object
         description: >-
-          (DDD Entity) - Mechanism allowing financial institutions that are members of a
-          clearing house to pay and to receive the amounts linked to the
-          transactions that they have executed on the market. The addition of
-          all the positions per product results in one net position (due or to
-          receive) with the clearing house or the central clearing
-          counterparty. 
+          (DDD Entity) -  Clearing|Clearing
+          (https://www.iso20022.org/standardsrepository/type/Clearing)|Standard|ISO20022
+          BM ()
         properties:
           ClearingThresholdIndicator:
               type: string
@@ -19579,8 +19597,9 @@ components:
     CashSettlement:
         type: object
         description: >-
-          (DDD Entity) - Instruction between two financial institutions stipulating the
-          cash transfer characteristics between the two parties. 
+          (DDD Entity) -  CashSettlement|CashSettlement
+          (https://www.iso20022.org/standardsrepository/type/CashSettlement)|Standard|ISO20022
+          BM ()
         properties:
           InterbankSettlementAmount:
               type: string
@@ -19658,8 +19677,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -20023,7 +20043,10 @@ components:
                 provided. 
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -20124,8 +20147,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -20288,10 +20312,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -20399,8 +20422,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
