--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/LegalEntityDirectory.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/LegalEntityDirectory.yaml
@@ -6,7 +6,7 @@ info:
     Legal Entity Directory (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/LegalEntityDirectory/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/LegalEntityDirectory/12.0.1'
 paths:
   '/LegalEntityDirectoryEntry/Register':
       post:
@@ -1128,7 +1128,11 @@ components:
         description: Status Attributes
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the associated party (one or more linked by role to
+          the legal entity) Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
