--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/LetterofCredit.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/LetterofCredit.yaml
@@ -6,7 +6,7 @@ info:
     Letter of Credit (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/LetterofCredit/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/LetterofCredit/12.0.1'
 paths:
   '/LetterOfCreditTransaction/{letterofcredittransactionid}/Control':
       put:
@@ -15132,10 +15132,9 @@ components:
     Undertaking:
         type: object
         description: >-
-          (DDD Entity) - Independent undertaking, such as a demand guarantee or standby
-          letter of credit, that provides financial assurance, to be collected
-          on the presentation of documents that comply with its terms and
-          conditions. 
+          (DDD Entity) -  Undertaking|Undertaking
+          (https://www.iso20022.org/standardsrepository/type/Undertaking)|Standard|ISO20022
+          BM ()
         properties:
           ElectronicSignature:
               type: string
@@ -15279,7 +15278,10 @@ components:
                 undertaking. 
     UndertakingPartyRole:
         type: object
-        description: '(DDD Entity) - Role played by a party in the context of an undertaking. '
+        description: >-
+          (DDD Entity) -  UndertakingPartyRole|UndertakingPartyRole
+          (https://www.iso20022.org/standardsrepository/type/UndertakingPartyRole)|Standard|ISO20022
+          BM ()
         properties:
           Undertaking:
               type: string
@@ -15288,8 +15290,12 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Unique and unambiguous identifier assigned to the undertaking
+          (Letter of Credit) issued by the guarantor/issuer. This reference is
+          used throughout the life cycle of the undertaking (Letter of Credit). 
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -15429,7 +15435,11 @@ components:
           Note: A zero amount is considered a positive amount.
     Expiry:
         type: object
-        description: '(DDD Entity) - Expiry parameters. '
+        description: >-
+          (DDD Entity) - Details related to the expiry terms of the undertaking (Letter of
+          Credit) Expiry|Expiry
+          (https://www.iso20022.org/standardsrepository/type/Expiry)|Standard|ISO20022
+          BM ()
         properties:
           ExpiryDateTime:
               type: string
@@ -15458,8 +15468,10 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) - Rules and laws governing the undertaking (Letter of Credit)
+          GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -15483,7 +15495,11 @@ components:
               description: '(DDD Entity) - Agency that publishes the governance rules. '
     Presentation:
         type: object
-        description: '(DDD Entity) - Presentation of documents. '
+        description: >-
+          (DDD Entity) - Presentation details related to the undertaking (Letter of Credit)
+          Presentation|Presentation
+          (https://www.iso20022.org/standardsrepository/type/Presentation)|Standard|ISO20022
+          BM ()
         properties:
           CommunicationMethod:
               type: string
@@ -15519,9 +15535,7 @@ components:
               description: '(DDD Entity) - Channel used for the transmission of a document. '
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) - Document or template enclosed in the undertaking (Letter of Credit) directly related to the undertaking (Letter of Credit) to be issued. Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
@@ -15640,10 +15654,23 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account that is involved in the Letter of Credit
+          such as: 
+
+
+          Liability Account: Account nominated by the obligor to record the
+          liability amount of the undertaking.
+
+
+          Charge Account: Account nominated by the obligor for the settlement of
+          charges related to the undertaking.
+
+              
+          Settlement Account: Account nominated by the obligor for the
+          settlement of the amount claimed under the undertaking.
+          Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -15829,7 +15856,10 @@ components:
                 portfolios. 
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location/Address|Location/Address
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM ()
         properties:
           NativePerson:
               type: string
@@ -15940,9 +15970,9 @@ components:
     PaymentInstruction:
         type: object
         description: >-
-          (DDD Entity) - Instruction to pay an amount of money to an ultimate beneficiary,
-          on behalf of an originator. This instruction may have to be forwarded
-          several times to complete the settlement chain. 
+          (DDD Entity) -  PaymentInstruction|PaymentInstruction
+          (https://www.iso20022.org/standardsrepository/type/PaymentInstruction)|Standard|ISO20022
+          BM ()
         properties:
           ProcessingValidityTime:
               type: string
@@ -15984,9 +16014,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -16046,8 +16076,9 @@ components:
     Demand:
         type: object
         description: >-
-          (DDD Entity) - Document signed by the beneficiary demanding payment under a
-          demand guarantee or standby letter of credit. 
+          (DDD Entity) -  Demand|Demand
+          (https://www.iso20022.org/standardsrepository/type/Demand)|Standard|ISO20022
+          BM ()
         properties:
           Undertaking:
               type: string
