--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/Loan.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/Loan.yaml
@@ -6,7 +6,7 @@ info:
     Loan (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/Loan/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/Loan/12.0.1'
 paths:
   '/LoanFacility/Initiate':
       post:
@@ -15071,9 +15071,9 @@ components:
     Loan:
         type: object
         description: >-
-          (DDD Entity) - Act of provding an amount of money, a property or other material
-          goods to a another party in exchange for future repayment of the
-          principal amount along with interest or other finance charges. 
+          (DDD Entity) - Reference to the loan product instance Loan|Loan
+          (https://www.iso20022.org/standardsrepository/type/Loan)|Standard|ISO20022
+          BM ()
         properties:
           PrincipalAmount:
               type: string
@@ -15092,8 +15092,10 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) - The associated loan account number in any suitable format
+          AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -15179,7 +15181,11 @@ components:
           example, 0.7 is 7/10 of a percent, and 7.0 is 7%.
     InterestCalculation:
         type: object
-        description: '(DDD Entity) - Set of parameters used to calculate an interest amount. '
+        description: >-
+          (DDD Entity) - The accrual method applied to interest calculations
+          InterestCalculation|InterestCalculation
+          (https://www.iso20022.org/standardsrepository/type/InterestCalculation)|Standard|ISO20022
+          BM ()
         properties:
           DayCountBasis:
               type: string
@@ -15290,7 +15296,10 @@ components:
           October 2004" which is aligned with ISO 8601.
     Asset:
         type: object
-        description: '(DDD Entity) - Tangible items of value to a business. '
+        description: >-
+          (DDD Entity) - Reference to allocated collateral Asset|Asset
+          (https://www.iso20022.org/standardsrepository/type/Asset)|Standard|ISO20022
+          BM ()
         properties:
           ExpiryDate:
               type: string
@@ -15384,7 +15393,12 @@ components:
               description: '(DDD Entity) - Identifies the asset. '
     AccountRestriction:
         type: object
-        description: '(DDD Entity) - Restriction on capability or operations allowed. '
+        description: >-
+          (DDD Entity) - The setting for the restriction option AccountRestriction_x000D_
+
+          |AccountRestriction
+          (https://www.iso20022.org/standardsrepository/type/AccountRestriction)|Standard|ISO20022
+          BM  ()
         properties:
           Account:
               type: string
@@ -15400,7 +15414,13 @@ components:
               description: '(DDD Entity) - Period during which the restriction is effective. '
     AccountPartyRole:
         type: object
-        description: '(DDD Entity) - Role played by a party in the context of account operations. '
+        description: >-
+          (DDD Entity) - Definition of the involved parties or associations to the account
+          Account Party Role_x000D_
+
+          |Account Party Role
+          (https://www.iso20022.org/standardsrepository/type/AccountPartyRole)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -15408,7 +15428,10 @@ components:
               description: '(DDD Entity) - Identifies the account for which a party plays a role. '
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the associated party Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -15467,7 +15490,11 @@ components:
               description: '(DDD Entity) - Specifies the type of shareholding. '
     Presentation:
         type: object
-        description: '(DDD Entity) - Presentation of documents. '
+        description: >-
+          (DDD Entity) - A record of customer correspondence/feedback
+          Presentation|Presentation
+          (https://www.iso20022.org/standardsrepository/type/Presentation)|Standard|ISO20022
+          BM ()
         properties:
           CommunicationMethod:
               type: string
@@ -15504,8 +15531,9 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) - The outstanding balance Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
@@ -15591,8 +15619,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Unique and unambiguous identification of a Product Marketing
+          State. GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -15724,8 +15754,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -16089,7 +16120,10 @@ components:
                 provided. 
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -16190,8 +16224,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -16295,10 +16330,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -16406,8 +16440,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -16570,10 +16605,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) -  Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -16760,9 +16794,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -16821,7 +16855,10 @@ components:
                 amount. 
     Assessment:
         type: object
-        description: '(DDD Entity) - Assessment for the components of a system. '
+        description: >-
+          (DDD Entity) -  Assessment|Assessment
+          (https://www.iso20022.org/standardsrepository/type/Assessment)|Standard|ISO20022
+          BM ()
         properties:
           AssessmentType:
               type: string
