--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/LocationDataManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/LocationDataManagement.yaml
@@ -6,7 +6,7 @@ info:
     Location Data Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/LocationDataManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/LocationDataManagement/12.0.1'
 paths:
   '/LocationDirectoryEntry/Register':
       post:
@@ -1540,7 +1540,11 @@ components:
         description: Status Attributes
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) - Reference to associated location (can be a physical or electronic
+          location) Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -1650,7 +1654,10 @@ components:
           allowed.
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) -  Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
