--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MerchandisingLoan.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MerchandisingLoan.yaml
@@ -6,7 +6,7 @@ info:
     Merchandising Loan (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/MerchandisingLoan/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/MerchandisingLoan/12.0.1'
 paths:
   '/MerchandisingLoanFacility/{merchandisingloanfacilityid}/Control':
       put:
@@ -20131,9 +20131,9 @@ components:
     Loan:
         type: object
         description: >-
-          (DDD Entity) - Act of provding an amount of money, a property or other material
-          goods to a another party in exchange for future repayment of the
-          principal amount along with interest or other finance charges. 
+          (DDD Entity) - Reference to Merchandising Loan Arrangement Loan|Loan
+          (https://www.iso20022.org/standardsrepository/type/Loan)|Standard|ISO20022
+          BM ()
         properties:
           PrincipalAmount:
               type: string
@@ -20151,7 +20151,10 @@ components:
               description: '(DDD Entity) - Loan is an intra-company loan. '
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Merchandising Loan Arrangement Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -20209,8 +20212,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Merchandising
+          Loan Arrangement in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -20254,7 +20259,13 @@ components:
               description: '(DDD Entity) - Agreement which is subject to a specific jurisdiction. '
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) - The financial accounting unit into which the financial events,
+          with regard to the origination and fulfillment of the agreement in the
+          context of Merchandising Loan Arrangement, are entered.
+          Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -20340,10 +20351,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Merchandising Loan
+          Arrangement Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -20530,8 +20541,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Unique and unambiguous identification of a Product Marketing
+          State. GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -20703,8 +20716,9 @@ components:
     PaymentProcessing:
         type: object
         description: >-
-          (DDD Entity) - Specifies how a payment must be processed, for instance through
-          which specific clearing channel. 
+          (DDD Entity) -  PaymentProcessing|PaymentProcessing
+          (https://www.iso20022.org/standardsrepository/type/PaymentProcessing)|Standard|ISO20022
+          BM ()
         properties:
           Priority:
               type: string
@@ -20774,9 +20788,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -20836,8 +20850,9 @@ components:
     DirectDebitMandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation in favour of the creditor given by the debtor to
-          debit its own account. 
+          (DDD Entity) -  DirectDebitMandate|DirectDebitMandate
+          (https://www.iso20022.org/standardsrepository/type/DirectDebitMandate)|Standard|ISO20022
+          BM ()
         properties:
           RelatedDirectDebit:
               type: string
@@ -20891,7 +20906,10 @@ components:
                 moment within a specified period type. 
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) -  Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -20950,7 +20968,10 @@ components:
               description: '(DDD Entity) - Specifies the type of shareholding. '
     PaymentTerms:
         type: object
-        description: '(DDD Entity) - Specifies the payment terms of the obligation. '
+        description: >-
+          (DDD Entity) -  PaymentTerms|PaymentTerms
+          (https://www.iso20022.org/standardsrepository/type/PaymentTerms)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -20991,8 +21012,9 @@ components:
     Mandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation given by an issuing party to a holder party to act
-          on the issuer's behalf. 
+          (DDD Entity) -  Mandate|Mandate
+          (https://www.iso20022.org/standardsrepository/type/Mandate)|Standard|ISO20022
+          BM ()
         properties:
           SignatureConditions:
               type: string
@@ -21072,9 +21094,7 @@ components:
           October 2004" which is aligned with ISO 8601.
     CashDeposit:
         type: object
-        description: >-
-          (DDD Entity) - Amount of money representing a value paid by a debtor to an agent
-          bank. 
+        description: (DDD Entity) -  CashDeposit| ()|Standard|ISO20022 BM ()
         properties:
           NoteDenomination:
               type: string
@@ -21103,8 +21123,9 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) -  AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -21167,8 +21188,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -21230,8 +21252,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -21256,8 +21279,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -21419,7 +21443,10 @@ components:
               description: '(DDD Entity) - Specifies the rate of tax levied. '
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -21520,8 +21547,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -21886,10 +21914,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -21997,8 +22024,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -22102,8 +22130,9 @@ components:
     Entry:
         type: object
         description: >-
-          (DDD Entity) - Posting to an account that results in an increase or decrease to a
-          balance. 
+          (DDD Entity) -  Entry|Entry
+          (https://www.iso20022.org/standardsrepository/type/Entry)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
