--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MerchantAcquiringFacility.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MerchantAcquiringFacility.yaml
@@ -6,7 +6,7 @@ info:
     Merchant Acquiring Facility (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/MerchantAcquiringFacility/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/MerchantAcquiringFacility/12.0.1'
 paths:
   '/MerchantAcquiringFacility/Initiate':
       post:
@@ -4035,8 +4035,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Unique and unambiguous identification of a Product Marketing
+          State. GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
