--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MortgageLoan.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MortgageLoan.yaml
@@ -6,7 +6,7 @@ info:
     Mortgage Loan (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/MortgageLoan/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/MortgageLoan/12.0.1'
 paths:
   '/MortgageLoanFacility/{mortgageloanfacilityid}/Control':
       put:
@@ -19631,9 +19631,9 @@ components:
     Loan:
         type: object
         description: >-
-          (DDD Entity) - Act of provding an amount of money, a property or other material
-          goods to a another party in exchange for future repayment of the
-          principal amount along with interest or other finance charges. 
+          (DDD Entity) - Reference to Mortgage Loan Arrangement Loan|Loan
+          (https://www.iso20022.org/standardsrepository/type/Loan)|Standard|ISO20022
+          BM ()
         properties:
           PrincipalAmount:
               type: string
@@ -19651,7 +19651,10 @@ components:
               description: '(DDD Entity) - Loan is an intra-company loan. '
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Mortgage Loan Arrangement Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -19709,8 +19712,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Mortgage Loan
+          Arrangement in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -19755,10 +19760,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Mortgage Loan
+          Arrangement Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -19945,8 +19950,11 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Identifier within the parent organisation for the product. Must be
+          unique in the organisation. 
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -20118,8 +20126,9 @@ components:
     PaymentProcessing:
         type: object
         description: >-
-          (DDD Entity) - Specifies how a payment must be processed, for instance through
-          which specific clearing channel. 
+          (DDD Entity) -  PaymentProcessing|PaymentProcessing
+          (https://www.iso20022.org/standardsrepository/type/PaymentProcessing)|Standard|ISO20022
+          BM ()
         properties:
           Priority:
               type: string
@@ -20188,7 +20197,10 @@ components:
                 transaction. 
     PaymentTerms:
         type: object
-        description: '(DDD Entity) - Specifies the payment terms of the obligation. '
+        description: >-
+          (DDD Entity) -  PaymentTerms|PaymentTerms
+          (https://www.iso20022.org/standardsrepository/type/PaymentTerms)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -20229,8 +20241,9 @@ components:
     DirectDebitMandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation in favour of the creditor given by the debtor to
-          debit its own account. 
+          (DDD Entity) -  DirectDebitMandate|DirectDebitMandate
+          (https://www.iso20022.org/standardsrepository/type/DirectDebitMandate)|Standard|ISO20022
+          BM ()
         properties:
           RelatedDirectDebit:
               type: string
@@ -20285,9 +20298,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -20346,7 +20359,10 @@ components:
                 amount. 
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -20431,7 +20447,10 @@ components:
               description: '(DDD Entity) - Offset of the time before or after 00:00 hour UTC. '
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) -  Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -20491,8 +20510,9 @@ components:
     Mandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation given by an issuing party to a holder party to act
-          on the issuer's behalf. 
+          (DDD Entity) -  Mandate|Mandate
+          (https://www.iso20022.org/standardsrepository/type/Mandate)|Standard|ISO20022
+          BM ()
         properties:
           SignatureConditions:
               type: string
@@ -20572,9 +20592,7 @@ components:
           October 2004" which is aligned with ISO 8601.
     CashDeposit:
         type: object
-        description: >-
-          (DDD Entity) - Amount of money representing a value paid by a debtor to an agent
-          bank. 
+        description: (DDD Entity) -  CashDeposit| ()|Standard|ISO20022 BM ()
         properties:
           NoteDenomination:
               type: string
@@ -20603,8 +20621,9 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) -  AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -20667,8 +20686,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -20730,8 +20750,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -20755,7 +20776,10 @@ components:
               description: '(DDD Entity) - Agency that publishes the governance rules. '
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -20856,8 +20880,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -21222,8 +21247,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -21386,8 +21412,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -21491,10 +21518,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -21602,8 +21628,9 @@ components:
     Entry:
         type: object
         description: >-
-          (DDD Entity) - Posting to an account that results in an increase or decrease to a
-          balance. 
+          (DDD Entity) -  Entry|Entry
+          (https://www.iso20022.org/standardsrepository/type/Entry)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
