--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/OperationalGateway.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/OperationalGateway.yaml
@@ -6,7 +6,7 @@ info:
     Operational Gateway (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/OperationalGateway/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/OperationalGateway/12.0.1'
 paths:
   '/OperationalGatewayOperatingSession/{operationalgatewayoperatingsessionid}/Control':
       put:
@@ -3557,7 +3557,11 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Operational Gateway Operating Session Status
+          |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
