--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PartyLifecycleManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PartyLifecycleManagement.yaml
@@ -6,7 +6,7 @@ info:
     Party Lifecycle Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/PartyLifecycleManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PartyLifecycleManagement/12.0.1'
 paths:
   '/PartyRelationshipAdministrativePlan/Initiate':
       post:
@@ -2700,7 +2700,10 @@ components:
         description: Status Attributes
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the legal entity (typically the customer) Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -2759,7 +2762,10 @@ components:
               description: '(DDD Entity) - Specifies the type of shareholding. '
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The state of relationship Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -2807,7 +2813,10 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Assessment:
         type: object
-        description: '(DDD Entity) - Assessment for the components of a system. '
+        description: >-
+          (DDD Entity) -  Assessment|Assessment
+          (https://www.iso20022.org/standardsrepository/type/Assessment)|Standard|ISO20022
+          BM ()
         properties:
           AssessmentType:
               type: string
@@ -2836,8 +2845,9 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) -  GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
