--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PartyReferenceDataDirectory.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PartyReferenceDataDirectory.yaml
@@ -6,7 +6,7 @@ info:
     Party Reference Data Directory (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/PartyReferenceDataDirectory/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PartyReferenceDataDirectory/12.0.1'
 paths:
   '/PartyReferenceDataDirectoryEntry/Register':
       post:
@@ -2783,7 +2783,11 @@ components:
         description: Status Attributes
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the associated customer (can currently be a person or
+          a company) Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -2871,7 +2875,11 @@ components:
         description: (DDD Entity) - W3C XML Schema Built-in datatype "Name".
     PartyIdentificationInformation:
         type: object
-        description: '(DDD Entity) - Unique and unambiguous way to identify a party '
+        description: >-
+          (DDD Entity) - 
+          PartyIdentificationInformation/TypeOfIdentification|PartyIdentificationInformation/TypeOfIdentification
+          (https://www.iso20022.org/standardsrepository/type/PartyIdentificationInformation)|Standard|ISO20022
+          BM ()
         properties:
           OtherIdentification:
               type: string
@@ -2940,7 +2948,10 @@ components:
                 registration authority. 
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) -  Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -2988,7 +2999,10 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Country:
         type: object
-        description: '(DDD Entity) - Nation with its own government. '
+        description: >-
+          (DDD Entity) -  Country |Country
+          (https://www.iso20022.org/standardsrepository/type/Country)|Standard|ISO20022
+          BM  ()
         properties:
           DomiciledFunds:
               type: string
@@ -3066,7 +3080,10 @@ components:
                 Nations (ISO 3166-2: Country subdivision code). 
     PostalAddress:
         type: object
-        description: '(DDD Entity) - Information that locates and identifies a specific address. '
+        description: >-
+          (DDD Entity) -  PostalAddress|PostalAddress
+          (https://www.iso20022.org/standardsrepository/type/PostalAddress)|Standard|ISO20022
+          BM ()
         properties:
           AddressType:
               type: string
@@ -3175,7 +3192,7 @@ components:
               description: '(DDD Entity) - Physical delivery information related to an address. '
     ContactPoint:
         type: object
-        description: '(DDD Entity) - Number, physical or virtual address, used for communication. '
+        description: "(DDD Entity) -  ContactPoint\_|ContactPoint\_ (https://www.iso20022.org/standardsrepository/type/ContactPoint)|Standard|ISO20022 BM  ()"
         properties:
           Identification:
               type: string
@@ -3258,8 +3275,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
