--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PaymentOrder.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PaymentOrder.yaml
@@ -6,7 +6,7 @@ info:
     Payment Order (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/PaymentOrder/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PaymentOrder/12.0.1'
 paths:
   '/PaymentOrderProcedure/Initiate':
       post:
@@ -1735,9 +1735,10 @@ components:
     PaymentInstruction:
         type: object
         description: >-
-          (DDD Entity) - Instruction to pay an amount of money to an ultimate beneficiary,
-          on behalf of an originator. This instruction may have to be forwarded
-          several times to complete the settlement chain. 
+          (DDD Entity) - Any specific payment instructions as appropriate
+          PaymentInstruction|PaymentInstruction
+          (https://www.iso20022.org/standardsrepository/type/PaymentInstruction)|Standard|ISO20022
+          BM ()
         properties:
           ProcessingValidityTime:
               type: string
@@ -1779,8 +1780,10 @@ components:
     CashSettlement:
         type: object
         description: >-
-          (DDD Entity) - Instruction between two financial institutions stipulating the
-          cash transfer characteristics between the two parties. 
+          (DDD Entity) - Requested settlement instructions, may be overridden by execution
+          CashSettlement|CashSettlement
+          (https://www.iso20022.org/standardsrepository/type/CashSettlement)|Standard|ISO20022
+          BM ()
         properties:
           InterbankSettlementAmount:
               type: string
@@ -1859,7 +1862,10 @@ components:
         type: object
         description: >-
           (DDD Entity) - Specifies how a payment must be processed, for instance through
-          which specific clearing channel. 
+          which specific clearing channel. (ISO20022)
+          PaymentProcessing|PaymentProcessing
+          (https://www.iso20022.org/standardsrepository/type/PaymentProcessing)|Standard|ISO20022
+          BM ()
         properties:
           Priority:
               type: string
@@ -1928,7 +1934,10 @@ components:
                 transaction. 
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) -  Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
