--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PositionKeeping.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PositionKeeping.yaml
@@ -6,7 +6,7 @@ info:
     Position Keeping (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/PositionKeeping/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PositionKeeping/12.0.1'
 paths:
   '/FinancialPositionLog/Initiate':
       post:
@@ -3430,10 +3430,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) - A record of applied interest Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -3550,8 +3549,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - The position definition, associated limit settings and rules
+          Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
@@ -3626,7 +3627,11 @@ components:
           October 2004" which is aligned with ISO 8601.
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of the log entry (e.g. active, in-suspense etc.) Status
+          |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
