--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProductDirectory.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProductDirectory.yaml
@@ -6,7 +6,7 @@ info:
     Product Directory (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ProductDirectory/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ProductDirectory/12.0.1'
 paths:
   '/ProductDirectoryEntry/Register':
       post:
@@ -1815,7 +1815,12 @@ components:
         description: Status Attributes
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) -  Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -1891,8 +1896,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -1954,8 +1960,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -1979,7 +1986,10 @@ components:
               description: '(DDD Entity) - Agency that publishes the governance rules. '
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
