--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FiduciaryAgreement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FiduciaryAgreement.yaml
@@ -6,7 +6,7 @@ info:
     Fiduciary Agreement (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/FiduciaryAgreement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/FiduciaryAgreement/12.0.1'
 paths:
   '/FiduciaryRelationshipFacility/{fiduciaryrelationshipfacilityid}/Control':
       put:
