--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FraudModel.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/FraudModel.yaml
@@ -6,7 +6,7 @@ info:
     Fraud Model (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/FraudModel/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/FraudModel/12.0.1'
 paths:
   '/FraudModelSpecification/Create':
       post:
