--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InternalBankAccount.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InternalBankAccount.yaml
@@ -6,7 +6,7 @@ info:
     Internal Bank Account (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/InternalBankAccount/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/InternalBankAccount/12.0.1'
 paths:
   '/InternalBankAccountFacility/{internalbankaccountfacilityid}/Capture':
       put:
@@ -2867,10 +2867,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Internal Bank Account
+          Facility Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -3065,7 +3065,10 @@ components:
           ISO 4217 Maintenance Agency, and consist of three contiguous letters.
     Position:
         type: object
-        description: '(DDD Entity) - Specifies the status of trades and their value inside a system. '
+        description: >-
+          (DDD Entity) - The position of Internal Bank Account Position |Position 
+          (https://www.iso20022.org/standardsrepository/type/Position)|Standard|ISO20022
+          BM ()
         properties:
           NetQuantity:
               type: string
@@ -3100,8 +3103,10 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) - Reference to the regulation which is defined in Internal Bank
+          Account Facility GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -3126,8 +3131,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Internal Bank
+          Account Facility in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -3172,8 +3179,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - Reference to the limitation related to the position of Internal
+          Bank Account Facility Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
@@ -3241,8 +3250,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - An unique reference to an item or an occurrence of CR "Internal
+          Bank Account" GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -3399,8 +3410,9 @@ components:
     Entry:
         type: object
         description: >-
-          (DDD Entity) - Posting to an account that results in an increase or decrease to a
-          balance. 
+          (DDD Entity) -  Entry|Entry
+          (https://www.iso20022.org/standardsrepository/type/Entry)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
