--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InvestmentPortfolioManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/InvestmentPortfolioManagement.yaml
@@ -6,8 +6,7 @@ info:
     Investment Portfolio Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/InvestmentPortfolioManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/InvestmentPortfolioManagement/12.0.1'
 paths:
   '/ManagedInvestmentPortfolioFacility/Initiate':
       post:
