--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MarketMaking.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MarketMaking.yaml
@@ -6,7 +6,7 @@ info:
     Market Making (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/MarketMaking/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/MarketMaking/12.0.1'
 paths:
   '/MarketMakingFacility/{marketmakingfacilityid}/Control':
       put:
@@ -5927,7 +5927,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Market Making Facility Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -5985,8 +5988,10 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) - Reference to the regulation which is defined in Market Making
+          Facility GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -6011,8 +6016,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Market Making
+          Facility in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -6057,10 +6064,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Market Making Facility
+          Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -6246,7 +6253,10 @@ components:
                 portfolios. 
     Position:
         type: object
-        description: '(DDD Entity) - Specifies the status of trades and their value inside a system. '
+        description: >-
+          (DDD Entity) - The position of Market Making Facility Position |Position 
+          (https://www.iso20022.org/standardsrepository/type/Position)|Standard|ISO20022
+          BM ()
         properties:
           NetQuantity:
               type: string
@@ -6280,7 +6290,13 @@ components:
                 period. 
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product which is linked to Market Making Facility
+          Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -6356,8 +6372,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - Reference to the limitation related to the position of Market
+          Making Facility Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
