--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MutualFundAdministration.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/MutualFundAdministration.yaml
@@ -6,7 +6,7 @@ info:
     Mutual Fund Administration (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/MutualFundAdministration/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/MutualFundAdministration/12.0.1'
 paths:
   '/MutualFundAdministrativePlan/{mutualfundadministrativeplanid}/Control':
       put:
@@ -7436,8 +7436,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - The set of administrative responsibilities defined in Mutual Fund
+          Administrative Plan Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -7499,8 +7501,10 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) - Balance of budget which is arranged whitin Mutual Fund
+          Administrative Plan Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
