--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/OpenItemManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/OpenItemManagement.yaml
@@ -6,7 +6,7 @@ info:
     Open Item Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/OpenItemManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/OpenItemManagement/12.0.1'
 paths:
   '/OpenItemProcedure/Initiate':
       post:
