--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PartyRoutingProfile.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PartyRoutingProfile.yaml
@@ -6,7 +6,7 @@ info:
     Party Routing Profile (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/PartyRoutingProfile/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PartyRoutingProfile/12.0.1'
 paths:
   '/PartyState/Initiate':
       post:
