--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PaymentExecution.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PaymentExecution.yaml
@@ -6,7 +6,7 @@ info:
     Payment Execution (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/PaymentExecution/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PaymentExecution/12.0.1'
 paths:
   '/PaymentExecutionProcedure/Initiate':
       post:
@@ -1724,9 +1724,10 @@ components:
     PaymentInstruction:
         type: object
         description: >-
-          (DDD Entity) - Instruction to pay an amount of money to an ultimate beneficiary,
-          on behalf of an originator. This instruction may have to be forwarded
-          several times to complete the settlement chain. 
+          (DDD Entity) - Reference to the payment order leading to the execution request
+          PaymentInstruction|PaymentInstruction
+          (https://www.iso20022.org/standardsrepository/type/PaymentInstruction)|Standard|ISO20022
+          BM ()
         properties:
           ProcessingValidityTime:
               type: string
@@ -1811,10 +1812,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to any external accounts used in processing
+          Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -2002,7 +2003,10 @@ components:
         type: object
         description: >-
           (DDD Entity) - Specifies how a payment must be processed, for instance through
-          which specific clearing channel. 
+          which specific clearing channel. (ISO20022)
+          PaymentProcessing|PaymentProcessing
+          (https://www.iso20022.org/standardsrepository/type/PaymentProcessing)|Standard|ISO20022
+          BM ()
         properties:
           Priority:
               type: string
