--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProcessingOrder.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProcessingOrder.yaml
@@ -6,7 +6,7 @@ info:
     Processing Order (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ProcessingOrder/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ProcessingOrder/12.0.1'
 paths:
   '/ProcessingOrderProcedure/{processingorderprocedureid}/Control':
       put:
@@ -2674,7 +2674,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Processing Order Procedure. Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -2722,7 +2725,13 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product or service that is related to Processing
+          Order Procedure. Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -2798,8 +2807,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Reference to the Financial Transaction Arrangement that is related
+          to Processing Order Procedure. Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -2860,7 +2871,13 @@ components:
               description: '(DDD Entity) - Type of exposure related to this obligation. '
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) - Reference to the Customer Agreement that is related to Processing
+          Order Procedure. Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
