--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProductMatching.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProductMatching.yaml
@@ -6,7 +6,7 @@ info:
     Product Matching (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ProductMatching/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ProductMatching/12.0.1'
 paths:
   '/ProductCustomerCombinationAssessment/{productcustomercombinationassessmentid}/Exchange':
       put:
@@ -2738,7 +2738,11 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Product/Customer Combination Assessment Status
+          |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
