--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProductSalesSupport.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ProductSalesSupport.yaml
@@ -6,7 +6,7 @@ info:
     Product Sales Support (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ProductSalesSupport/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ProductSalesSupport/12.0.1'
 paths:
   '/ProductSalesSupportAdministrativePlan/{productsalessupportadministrativeplanid}/Control':
       put:
@@ -3007,8 +3007,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - The set of administrative responsibilities defined in Product
+          Sales Support Administrative Plan Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -3070,8 +3072,10 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) - Balance of budget which is arranged whitin Product Sales Support
+          Administrative Plan Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
